.metadata/.plugins/org.eclipse.cdt.ui/STM32_uartPrintf.build.log
17:18:43 **** Incremental Build of configuration Debug for project STM32_uartPrintf ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DSTM32L073xx -DUSE_FULL_LL_DRIVER -DHSE_VALUE=8000000 -DHSE_STARTUP_TIMEOUT=100 -DLSE_STARTUP_TIMEOUT=5000 -DLSE_VALUE=32768 -DMSI_VALUE=2097000 -DHSI_VALUE=16000000 -DLSI_VALUE=37000 -DVDD_VALUE=3300 -DPREFETCH_ENABLE=0 -DINSTRUCTION_CACHE_ENABLE=1 -DDATA_CACHE_ENABLE=1 -c -I../Core/Inc -I../Drivers/STM32L0xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32L0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:90:3: warning: implicit declaration of function 'RetargetInit' [-Wimplicit-function-declaration]
   90 |   RetargetInit(USART2);
      |   ^~~~~~~~~~~~
../Core/Src/main.c:91:3: warning: implicit declaration of function 'getchInit' [-Wimplicit-function-declaration]
   91 |   getchInit();
      |   ^~~~~~~~~
../Core/Src/main.c:105:9: warning: implicit declaration of function 'kbhit' [-Wimplicit-function-declaration]
  105 |     if (kbhit())
      |         ^~~~~
../Core/Src/main.c:107:16: warning: implicit declaration of function 'getch'; did you mean 'getc'? [-Wimplicit-function-declaration]
  107 |       char c = getch();
      |                ^~~~~
      |                getc
../Core/Src/main.c:110:7: error: expected '}' before 'else'
  110 |       else if (c == 'm') {
      |       ^~~~
../Core/Src/main.c:110:16: error: 'c' undeclared (first use in this function)
  110 |       else if (c == 'm') {
      |                ^
../Core/Src/main.c:110:16: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c: At top level:
../Core/Src/main.c:125:1: error: expected identifier or '(' before '}' token
  125 | }
      | ^
make: *** [Core/Src/subdir.mk:46: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

17:18:44 Build Failed. 4 errors, 4 warnings. (took 1s.66ms)

